salesforce/force-app/main/default/objects/Opportunity/fields/Quarterly_Commit__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Commit__c</fullName>
    <description>Returns ACV only when BL Forecast Category is Commit and net value is greater than 0. For renewals, uses Renewal Net Change. Excludes flat/downgrade renewals.</description>
    <formula>IF(
  AND(
    Eudia_Tech__c, 
    ISPICKVAL(BL_Forecast_Category__c, "Commit"),
    IF(ISPICKVAL(Sales_Type__c, "Renewal"), Renewal_Net_Change__c, ACV__c) &gt; 0
  ),
  IF(ISPICKVAL(Sales_Type__c, "Renewal"), Renewal_Net_Change__c, ACV__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Commit Net (AI-Enabled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>