salesforce/force-app/main/default/objects/Opportunity/fields/Quarterly_Commit_Net_New__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Commit_Net_New__c</fullName>
    <description>Returns Net ACV only for deals where BL Forecast Category is Commit. Uses Net ACV for existing customers, ACV for new business. Only positive values.</description>
    <formula>IF(
  AND(
    ISPICKVAL(BL_Forecast_Category__c, "Commit"),
    IF(Prior_Opp_ACV__c &gt; 0, Renewal_Net_Change__c, ACV__c) &gt; 0
  ),
  IF(Prior_Opp_ACV__c &gt; 0, Renewal_Net_Change__c, ACV__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Commit (Net New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>