salesforce/force-app/main/default/objects/Opportunity/fields/Sourced_By__c.field-meta.xml
<CustomField>
    <fullName>Sourced_By__c</fullName>
    <description>The Business Lead who originally sourced this opportunity through outreach.</description>
    <inlineHelpText>Which Business Lead sourced this opportunity?</inlineHelpText>
    <label>Sourced By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Sourced</relationshipName>
    <type>Lookup</type>
</CustomField>