salesforce/force-app/main/default/objects/Opportunity/fields/Weighted_ACV_AI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Weighted_ACV_AI_Enabled__c</fullName>
    <description>Probability-weighted ACV for AI-Enabled opportunities only. Uses Net ACV for existing customers (Prior Opp ACV &gt; 0). Only returns positive values.</description>
    <formula>IF(
  AND(
    Eudia_Tech__c,
    IF(Prior_Opp_ACV__c &gt; 0, Renewal_Net_Change__c, ACV__c) &gt; 0
  ),
  IF(Prior_Opp_ACV__c &gt; 0, Renewal_Net_Change__c, ACV__c) * 
    IF(Probability_Override__c, Custom_Probability_Value__c, Calculated_Probability__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted ACV (AI-Enabled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>