salesforce/force-app/main/default/objects/Opportunity/recordTypes/Standard_Sales_RT.recordType-meta.xml
<RecordType>
    <fullName>Standard_Sales_RT</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Standard Sales RT</label>
</RecordType>