salesforce/force-app/main/default/objects/Opportunity/recordTypes/Strategy_M_A.recordType-meta.xml
<RecordType>
    <fullName>Strategy_M_A</fullName>
    <active>true</active>
    <businessProcess>Strategy - M%26A</businessProcess>
    <label>Strategy - M&amp;A</label>
</RecordType>