salesforce/force-app/main/default/objects/Opportunity/recordTypes/Strategy_Partners.recordType-meta.xml
<RecordType>
    <fullName>Strategy_Partners</fullName>
    <active>true</active>
    <businessProcess>Strategy - Partners</businessProcess>
    <label>Strategy - Partners</label>
</RecordType>